Switch to `macos-15` ahead of time 🍎
Annotations: The macos-latest label will migrate to macOS 15 beginning August 4, 2025

--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -15,7 +15,7 @@ concurrency:
 jobs:
   test-wasm:
     name: Test Wasm
-    runs-on: macos-latest
+    runs-on: macos-15
     steps:
       - name: Checkout the repo
         uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4
@@ -48,7 +48,7 @@ jobs:
 
   build-wasm:
     name: Build Wasm
-    runs-on: macos-latest
+    runs-on: macos-15
     needs: test-wasm
     steps:
       - name: Checkout the repo
@@ -101,7 +101,7 @@ jobs:
 
   test-js:
     name: Test JS
-    runs-on: macos-latest
+    runs-on: macos-15
     steps:
       - name: Checkout the repo
         uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4
@@ -126,7 +126,7 @@ jobs:
 
   build-js:
     name: Build JS
-    runs-on: macos-latest
+    runs-on: macos-15
     needs: [test-js, build-wasm]
     steps:
       - name: Checkout the repo
@@ -180,7 +180,7 @@ jobs:
 
   build-scss:
     name: Build SCSS
-    runs-on: macos-latest
+    runs-on: macos-15
     steps:
       - name: Checkout the repo
         uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4
@@ -209,7 +209,7 @@ jobs:
 
   convert-woff2:
     name: Convert WOFF2
-    runs-on: macos-latest
+    runs-on: macos-15
     steps:
       - name: Checkout the repo
         uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4
@@ -251,7 +251,7 @@ jobs:
 
   test-mdbook-backend:
     name: Test mdBook Backend
-    runs-on: macos-latest
+    runs-on: macos-15
     steps:
       - name: Checkout the repo
         uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4
@@ -279,7 +279,7 @@ jobs:
     permissions:
       contents: write
     name: Build and Deploy
-    runs-on: macos-latest
+    runs-on: macos-15
     if: ${{ github.ref == 'refs/heads/main' }}
     needs: [build-wasm, build-js, build-scss, convert-woff2, test-mdbook-backend]
     steps:
