--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -16,6 +16,8 @@ jobs:
   cache-media-files:
     name: Cache Media Files
     runs-on: macos-15
+    outputs:
+      media-cache-key: ${{ steps.cache-source.outputs.cache-primary-key }}
     steps:
       - name: Checkout the repo
         uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4
@@ -322,7 +324,8 @@ jobs:
         uses: actions/cache@5a3ec84eff668545956fd18022155c47e93e2684 # v4
         with:
           path: tmp-media
-          key: media-${{ hashFiles('src/**/*.webp', 'src/**/*.webm', 'src/**/*.mp3') }}
+          key: ${{ needs.cache-media-files.outputs.media-cache-key }}
+          restore-keys: media-
 
       - name: Fail If Media Cache Not Found
         if: steps.cache-media.outputs.cache-hit != 'true'
