fix: Use cache-matched-key for reliable cross-job cache reuse
Co-authored-by: coderabbitai[bot] <136622811+coderabbitai[bot]@users.noreply.github.com>

--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -17,7 +17,7 @@ jobs:
     name: Cache Media Files
     runs-on: macos-15
     outputs:
-      media-cache-key: ${{ steps.cache-source.outputs.cache-primary-key }}
+      media-cache-key: ${{ steps.cache-source.outputs.cache-matched-key }}
     steps:
       - name: Checkout the repo
         uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4
