--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -28,21 +28,26 @@ jobs:
 
       - name: Set Cache Key
         id: set-cache-key
-        run: echo "cache-key=media-${{ hashFiles('src/**/*.webp', 'src/**/*.webm', 'src/**/*.mp3') }}" >> $GITHUB_OUTPUT
+        run: |
+          echo "cache-key=media-${{ hashFiles('src/**/*.webp', 'src/**/*.webm', 'src/**/*.mp3') }}" >> $GITHUB_OUTPUT
 
       - name: Cache Source
         id: cache-source
         uses: actions/cache@5a3ec84eff668545956fd18022155c47e93e2684 # v4
         with:
-          path: |
-            src/**/*.webp
-            src/**/*.webm
-            src/**/*.mp3
+          path: tmp-media
           key: media-${{ hashFiles('src/**/*.webp', 'src/**/*.webm', 'src/**/*.mp3') }}
 
       - name: Ensure LFS Files Are Pulled
         if: steps.cache-source.outputs.cache-hit != 'true'
-        run: git lfs pull
+        run: |
+          git lfs pull
+
+      - name: Synchronize Media Files
+        if: steps.cache-source.outputs.cache-hit != 'true'
+        run: |
+          mkdir tmp-media
+          rsync -a --include='*/' --include='*.webp' --include='*.webm' --include='*.mp3' --exclude='*' src/ tmp-media
 
   test-wasm:
     name: Test Wasm
@@ -336,7 +341,7 @@ jobs:
 
       - name: Copy Cached Media Back
         run: |
-          rsync -a tmp-media/src/ src/
+          rsync -a tmp-media/ src/
           rm -rf tmp-media
 
       - name: Download All Artifacts
