Politely assure `TypeScript` and `Biome` that everything is fine 🏛️
Anyone can pretend to be ‘sincere’ and ‘considerate’ when all they’re doing is saying empty words!! 🤣

--- a/js/tsconfig.json
+++ b/js/tsconfig.json
@@ -16,7 +16,11 @@
     "strict": true,
     "noFallthroughCasesInSwitch": true,
 
-    // Some stricter flags
+    // Stricter Typechecking Options
+    "noUncheckedIndexedAccess": true,
+    "exactOptionalPropertyTypes": true,
+
+    // Code cleanliness / Lint-like flags
     "noUnusedLocals": true,
     "noUnusedParameters": true,
     "noPropertyAccessFromIndexSignature": true,
