Limit LFS transfer volume by scoping includes
Co-authored-by: coderabbitai[bot] <136622811+coderabbitai[bot]@users.noreply.github.com>

--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -54,8 +54,7 @@ jobs:
       - name: Pull missing LFS files (on partial or miss)
         if: steps.check-cache.outputs.exact != 'true'
         run: |
-          git lfs pull
-
+          git lfs pull --include="src/**/*.webp,src/**/*.webm,src/**/*.mp3"
       - name: Synchronize Media Files
         if: steps.check-cache.outputs.exact != 'true'
         run: |
