You say it's an error, but it's not (maybe...)

--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -462,6 +462,7 @@ jobs:
 
   deploy:
     name: Deploy
+    if: ${{ github.event_name == 'push' && github.ref == 'refs/heads/main' }}
     runs-on: ubuntu-latest
     needs: build
     permissions:
