--- a/js/tsconfig.json
+++ b/js/tsconfig.json
@@ -27,6 +27,10 @@
 
     // Improved code predictability and consistency
     "erasableSyntaxOnly": true,
-    "verbatimModuleSyntax": true
-  }
+    "verbatimModuleSyntax": true,
+
+    // Vitest
+    "types": ["vitest/globals"],
+  },
+  "include": ["src", "test"]
 }
