--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -167,6 +167,7 @@ jobs:
   test-js:
     name: Test JS
     runs-on: macos-15
+    needs: build-wasm
     steps:
       - name: Checkout the repo
         uses: actions/checkout@08c6903cd8c0fde910a37f88322edcfb5dd907a8 # v5
@@ -181,6 +182,17 @@ jobs:
             ~/.bun/install/cache
             js/node_modules
           key: js-${{ runner.os }}-bun-${{ hashFiles('**/bun.lock') }}
+
+      - name: Download wasm_pkg
+        uses: actions/download-artifact@634f93cb2916e3fdff6788551b99b062d0335ce0 # v5
+        with:
+          name: wasm-book
+          path: pkg
+
+      - name: Copy wasm_js
+        run: |
+          cp pkg/wasm_book.js js
+          cp pkg/wasm_book.d.ts js
 
       - name: Setup Bun
         uses: oven-sh/setup-bun@735343b667d3e6f658f44d0eca948eb6282f2b76 # v2
