Add happy-dom devDependency (Vitest env requires it) and drop the registrator.

--- a/js/package.json
+++ b/js/package.json
@@ -4,8 +4,8 @@
     "uuid": "13.0.0"
   },
   "devDependencies": {
-    "@happy-dom/global-registrator": "latest",
     "@types/bun": "1.2.21",
+    "happy-dom": "latest",
     "typescript": "5.9.2",
     "vitest": "3.2.4"
   }
