--- a/js/package.json
+++ b/js/package.json
@@ -5,6 +5,7 @@
   },
   "devDependencies": {
     "@types/bun": "1.2.21",
+    "@vitest/coverage-v8": "3.2.4",
     "happy-dom": "latest",
     "typescript": "5.9.2",
     "vitest": "3.2.4"
