Pin happy-dom to a known-good version (avoid "latest").
Co-authored-by: coderabbitai[bot] <136622811+coderabbitai[bot]@users.noreply.github.com>

--- a/js/package.json
+++ b/js/package.json
@@ -6,7 +6,7 @@
   "devDependencies": {
     "@types/bun": "1.2.21",
     "@vitest/coverage-v8": "3.2.4",
-    "happy-dom": "latest",
+    "happy-dom": "^18.0.1",
     "typescript": "5.9.2",
     "vitest": "3.2.4"
   }
