--- a/js/package.json
+++ b/js/package.json
@@ -9,5 +9,9 @@
     "happy-dom": "^18.0.1",
     "typescript": "5.9.2",
     "vitest": "3.2.4"
+  },
+  "scripts": {
+    "test": "vitest",
+    "test:ci": "vitest run --coverage"
   }
 }
