--- a/js/package.json
+++ b/js/package.json
@@ -4,8 +4,14 @@
     "uuid": "13.0.0"
   },
   "devDependencies": {
-    "@happy-dom/global-registrator": "latest",
     "@types/bun": "1.2.21",
-    "typescript": "5.9.2"
+    "@vitest/coverage-v8": "3.2.4",
+    "happy-dom": "^18.0.1",
+    "typescript": "5.9.2",
+    "vitest": "3.2.4"
+  },
+  "scripts": {
+    "test": "vitest",
+    "test:ci": "vitest run --coverage"
   }
 }
