Extensive site-wide update 🐟 (#554)
* Extensive site-wide update 🐈

* Constantization of Breakpoints / Style Adjustment / Try incorporating animation 🐁

* Should it be placed in the top-left corner even in the compact UI menu? 🥫

* Save color themes for each system appearance 🎨

* “``apple-mobile-web-app-capable` appears to have been deprecated for quite some time...

* Restore DOM typings — tsconfig removed DOM but many files use DOM APIs

* fix: Same ordering bug at initialization.

* Fix search hotkey mismatch and aria-controls target.

* from "Nitpick comments"

* fix: Pointerdown listener leak when hiding via toggle/ESC.

* fix: Theme switching order causes flashes and uses fragile class detection.

* from many many "Nitpick comments"

* From the last “nitpick comments”

* Today is truly the very last time!

* Please, let this be the last time...!

* I forgot to delete the commented-out code...

--- a/js/tsconfig.json
+++ b/js/tsconfig.json
@@ -30,7 +30,7 @@
     "verbatimModuleSyntax": true,
 
     // Vitest
-    "types": ["vitest/globals"],
+    "types": ["vitest/globals"]
   },
   "include": ["src", "test"]
 }
