Some kind of error is popping up...

--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -146,8 +146,7 @@ jobs:
 
       - name: Install Binaryen
         run: |
-          sudo apt update
-          sudo apt install -y binaryen
+          npm install -g binaryen
 
       - name: Optimization Wasm
         working-directory: rs/wasm
