--- a/js/package.json
+++ b/js/package.json
@@ -1,12 +1,13 @@
 {
   "dependencies": {
+    "plyr": "3.8.3",
     "terser": "5.44.0",
     "uuid": "13.0.0"
   },
   "devDependencies": {
     "@types/bun": "1.3.0",
     "@vitest/coverage-v8": "3.2.4",
-    "happy-dom": "^20.0.0",
+    "happy-dom": "^20.0.1",
     "typescript": "5.9.3",
     "vitest": "3.2.4"
   },
