Incorrect command: Use deno task instead of deno run.
Co-authored-by: coderabbitai[bot] <136622811+coderabbitai[bot]@users.noreply.github.com>

--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -196,7 +196,7 @@ jobs:
       - name: Run Vitest
         working-directory: js
         run: |
-          deno run test:ci
+          deno task test:ci
 
       - name: Upload coverage
         uses: actions/upload-artifact@ea165f8d65b6e75b540449e92b4886f43607fa02 # v4
