--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -188,7 +188,7 @@ jobs:
           cp pkg/wasm_book.d.ts js
 
       - name: Setup Deno
-        uses: denoland/setup-deno@e95548e56dfa95d4e1a28d6f422fafe75c4c26fb # v2
+        uses: denoland/setup-deno@v2
         with:
           deno-version-file: .tool-versions
           cache: true
@@ -229,7 +229,7 @@ jobs:
           cp pkg/wasm_book.d.ts js
 
       - name: Setup Deno
-        uses: denoland/setup-deno@e95548e56dfa95d4e1a28d6f422fafe75c4c26fb # v2
+        uses: denoland/setup-deno@v2
         with:
           deno-version-file: .tool-versions
           cache: true
@@ -259,7 +259,7 @@ jobs:
             scss
 
       - name: Setup Deno
-        uses: denoland/setup-deno@e95548e56dfa95d4e1a28d6f422fafe75c4c26fb # v2
+        uses: denoland/setup-deno@v2
         with:
           deno-version-file: .tool-versions
           cache: true
