--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,7 @@ js/coverage
 js/dist
 js/highlight
 js/wasm_book.js
+js/wasm_book.d.ts
 
 rs/mdbook-footnote/test/result.md
 
@@ -17,7 +18,6 @@ css/*.css.map
 
 scss/dist
 
-*.d.ts
 *.tmp
 *.wasm
 
