Please also obtain `mdbook-tailor` from `github`

--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -421,7 +421,10 @@ jobs:
           git clone https://github.com/CoralPink/mdbook-admonish.git -b mdbook-v0.5.x --depth 1 || exit 1
           cargo install --path ./mdbook-admonish
 
-          cargo install mdbook-tailor
+          #cargo install mdbook-tailor
+          git clone https://github.com/CoralPink/mdbook-tailor --depth 1 || exit 1
+          cargo install --path ./mdbook-tailor
+
           cargo install --path ./rs/mdbook-footnote
 
       - name: Setup Pages
