--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -358,7 +358,7 @@ jobs:
     runs-on: ubuntu-latest
     needs: [build-wasm, build-js, build-scss, cache-media-files, convert-woff2, test-mdbook-backend]
     env:
-      MDBOOK_VERSION: 0.4.52
+      MDBOOK_VERSION: 0.5.1
     steps:
       - name: Checkout the repo
         uses: actions/checkout@93cb6efe18208431cddfb8368fd83d5badbf9bfd # v5
@@ -416,8 +416,15 @@ jobs:
         if: steps.cache-cargo.outputs.cache-hit != 'true'
         run: |
           cargo install --version ${MDBOOK_VERSION} mdbook
-          cargo install mdbook-admonish
-          cargo install mdbook-tailor
+
+          #cargo install mdbook-admonish
+          git clone https://github.com/CoralPink/mdbook-admonish.git -b mdbook-v0.5.x --depth 1 || exit 1
+          cargo install --path ./mdbook-admonish
+
+          #cargo install mdbook-tailor
+          git clone https://github.com/CoralPink/mdbook-tailor --depth 1 || exit 1
+          cargo install --path ./mdbook-tailor
+
           cargo install --path ./rs/mdbook-footnote
 
       - name: Setup Pages
@@ -456,7 +463,6 @@ jobs:
           rm ayu-highlight.css
           rm clipboard.min.js
           rm elasticlunr.min.js
-          rm favicon.png
           rm fonts.css
           rm highlight.css
           rm highlight.js
