Delete unnecessary files 🧽

--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -461,6 +461,7 @@ jobs:
         working-directory: book
         run: |
           rm ayu-highlight.css
+          rm book.js
           rm clipboard.min.js
           rm elasticlunr.min.js
           rm fonts.css
