Organize internal code management Part2 🧙‍♀️🧙
- Optimizing startup processes during landing
- Pre-process URL generation for the sidebar during build time
- Modified jump behavior for certain links

--- a/scripts/package.json
+++ b/scripts/package.json
@@ -3,5 +3,9 @@
   "dependencies": {
     "cheerio": "1.1.2",
     "js-beautify": "1.15.4"
+  },
+  "scripts": {
+    "build": "node generate-pagelist.js",
+    "build:debug": "node generate-pagelist.js --debug"
   }
 }
