--- a/rs/wasm/Cargo.toml
+++ b/rs/wasm/Cargo.toml
@@ -1,9 +1,9 @@
 [package]
 name = "wasm-book"
-version = "1.1.4"
+version = "1.2.0"
 authors = ["CoralPink <teqt6ytqt@mozmail.com>"]
 edition = "2024"
-rust-version = "1.85"
+rust-version = "1.88"
 description = "This is the WebAssembly code used on this site."
 homepage = "https://github.com/CoralPink"
 repository = "https://github.com/CoralPink/commentary"
@@ -21,18 +21,20 @@ opt-level = "s"
 strip = "symbols"
 
 [dependencies]
-arrayvec = "=0.7.6"
 getset = "=0.1.6"
 html-escape = "=0.2.13"
 js-sys = "=0.3.88"
-macros = { path = "macros" }
+macros = { path = "macros", default-features = false }
 serde = { version = "=1.0.228", features = ["derive"] }
 serde-wasm-bindgen = "=0.6.5"
-urlencoding = "=2.1.3"
+unicode-segmentation = "=1.12.0"
 wasm-bindgen = "=0.2.111"
 
 [dev-dependencies]
 wasm-bindgen-test = "=0.3.61"
+
+[features]
+debug = ["macros/use-browser-console"]
 
 [package.metadata.wasm-pack.profile.release]
 wasm-opt = false
