--- a/rs/wasm/macros/Cargo.toml
+++ b/rs/wasm/macros/Cargo.toml
@@ -1,10 +1,13 @@
 [package]
 name = "macros"
-version = "0.2.4"
+version = "0.3.0"
 edition = "2024"
 
 [dependencies]
-wasm-bindgen = "=0.2.111"
+wasm-bindgen = { version = "0.2.111", optional = true }
+
+[features]
+use-browser-console = ["wasm-bindgen"]
 
 [dependencies.web-sys]
 version = "=0.3.88"
